--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --main: #167171;
 }
 
 @theme inline {
@@ -20,7 +20,6 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  color: #3b3a3a;
   font-family: Arial, Helvetica, sans-serif;
 }
